# 1-week-game

./: .clang-format  CMakeLists.txt  Justfile  README.md  build.sh
assets/levels/: 3.txt  5.txt  6.txt
levels/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/: config.hpp  helpers.cpp  helpers.hpp  main.cpp
